--- a/FaPA/GUI/Controls/LogOnMask/ChangePassword.xaml
+++ b/FaPA/GUI/Controls/LogOnMask/ChangePassword.xaml
@@ -62,7 +62,7 @@
 			</Grid.RenderTransform>
 
 			<Border Grid.RowSpan="3" BorderThickness="1" VerticalAlignment="Top" Margin="0,20,0,0">
-                <Image x:Name="imgUser" Source="/Design/Styles/Images/lightbulb-icon-39x39.png" MaxHeight="150" />
+                <Image x:Name="imgUser" Source="/GUI/Design/Styles/Images/fpa.jpg" MaxHeight="150" />
 			</Border>
 
 
@@ -114,7 +114,7 @@
 
                 <Image DockPanel.Dock="Left" Margin="0,2,0,0" Height="64" Width="64" 
                        ToolTip="{Binding Errors}" 
-                       Source="/GUI/Design/Styles/Images/ValidationError.png" />
+                       Source="\GUI\Design\Styles\Images\ValidationError.png" />
 
                 <TextBlock Padding="0" FontSize="12" FontFamily="Segoe UI" Margin="0,7,0,0"
                            Foreground="DarkGray" Width="200" TextWrapping="Wrap" SnapsToDevicePixels="True"
