--- a/FaPA/GUI/Controls/LogOnMask/SmartPasswordBoxesRD.xaml
+++ b/FaPA/GUI/Controls/LogOnMask/SmartPasswordBoxesRD.xaml
@@ -19,7 +19,7 @@
 		<ObjectAnimationUsingKeyFrames Storyboard.TargetName="PasswordRevealImage" Storyboard.TargetProperty="(Image.Source)">
 			<DiscreteObjectKeyFrame KeyTime="00:00:00">
 				<DiscreteObjectKeyFrame.Value>
-					<BitmapImage UriSource="/GUI/Design/Styles/Images/PasswordEyeWhite.png" />
+					<BitmapImage UriSource="\GUI\Design\Styles\Images\PasswordEyeWhite.png" />
 				</DiscreteObjectKeyFrame.Value>
 			</DiscreteObjectKeyFrame>
 		</ObjectAnimationUsingKeyFrames>
@@ -34,7 +34,7 @@
 		<ObjectAnimationUsingKeyFrames Storyboard.TargetName="PasswordRevealImage" Storyboard.TargetProperty="(Image.Source)">
 			<DiscreteObjectKeyFrame KeyTime="00:00:00">
 				<DiscreteObjectKeyFrame.Value>
-                    <BitmapImage UriSource="/GUI/Design/Styles/Images/PasswordEyeBlack.png" />
+                    <BitmapImage UriSource="\GUI\Design\Styles\Images\PasswordEyeBlack.png" />
 				</DiscreteObjectKeyFrame.Value>
 			</DiscreteObjectKeyFrame>
 		</ObjectAnimationUsingKeyFrames>
