--- a/FaPA/GUI/Controls/MyRecordNavigator/MyRecordNavigator.xaml
+++ b/FaPA/GUI/Controls/MyRecordNavigator/MyRecordNavigator.xaml
@@ -18,12 +18,12 @@
                 
             <Button x:Name="MoveFirst" Margin="4,0,0,0"
                             Command="{Binding Path=MoveFirstCommand}" ToolTip="Passa alla prima scheda">
-                <Image Source="/GUI/Design/Styles/Images/ArrowFirst.png"/>
+                <Image Source="\GUI\Design\Styles\Images\ArrowFirst.png"/>
             </Button>
                 
             <Button Command="{Binding Path=MovePreviousCommand}" Margin="2,0,0,0"
                         ToolTip="Passa alla scheda precedente">
-                    <Image Source="/GUI/Design/Styles/Images/ArrowPrev.png" />
+                    <Image Source="\GUI\Design\Styles\Images\ArrowPrev.png" />
             </Button>
                 
             <TextBox  x:Name="PART_RecNum"
@@ -44,13 +44,13 @@
             <Button Command="{Binding Path=MoveNextCommand}"
                         Margin="2,0,0,0"
                         ToolTip="Passa alla scheda successiva">
-                <Image Source="/GUI/Design/Styles/Images/ArrowNext.png" />
+                <Image Source="\GUI\Design\Styles\Images\ArrowNext.png" />
             </Button>
 
             <Button Command="{Binding Path=MoveLastCommand}"
                         Margin="2,0,0,0"
                         ToolTip="Passa all'ultima scheda">
-                    <Image Source="/GUI/Design/Styles/Images/ArrowLast.png" />
+                    <Image Source="\GUI\Design\Styles\Images\ArrowLast.png" />
                 </Button>
                 
             
