--- a/FaPA/GUI/Design/Templates/AnagraficaGrid.xaml
+++ b/FaPA/GUI/Design/Templates/AnagraficaGrid.xaml
@@ -122,7 +122,7 @@
                         Command="{Binding Presenter.OnGridEmptyCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
                         ToolTip="Crea una nuova categoria">
 
-                <Image Source="/GUI/Design/Styles/Images/1343547225_file_add.png"
+                <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png"
                        
                        Width="32"/>
             </Button>
@@ -132,7 +132,7 @@
                     ToolTip="Apre la scheda dettaglio categoria" 
                     Width="25">
 
-                <Image Source="/GUI/Design/Styles/Images/find(2).png"
+                <Image Source="\GUI\Design\Styles\Images\find(2).png"
                        Width="Auto"/>
             </Button>
 
