--- a/FaPA/GUI/Design/Templates/CrudFattura.xaml
+++ b/FaPA/GUI/Design/Templates/CrudFattura.xaml
@@ -43,13 +43,13 @@
 
             <Button Name="Delete" Command="{Binding DeleteEntityCommand}"                        
                     ToolTip="Elimina definitivamente l'oggetto dal database" >
-                <Image Source="/GUI/Design/Styles/Images/delete(1).png" Width="25"/>
+                <Image Source="\GUI\Design\Styles\Images\delete(1).png" Width="25"/>
             </Button>
 
             <Button Name="CreateNew" Command="{Binding Path=AddNewEntity}"
                     ToolTip="Crea nuovo oggetto"  IsEnabled="{Binding Path=AllowInsertNewEntity}">
 
-                <Image Source="/GUI/Design/Styles/Images/1343547225_file_add.png" Width="25"/>
+                <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png" Width="25"/>
 
             </Button>
 
@@ -57,14 +57,14 @@
                     ToolTip="Salva le modifiche apportate all'oggetto"
                     Width="Auto" IsEnabled="{Binding AllowSave}">
 
-                <Image Source="/GUI/Design/Styles/Images/save(1).png" Width="25"/>
+                <Image Source="\GUI\Design\Styles\Images\save(1).png" Width="25"/>
             </Button>
 
             <Button Name="Cancel" Command="{Binding PerformCancel}"                           
                     ToolTip="Annulla le modifiche apportate"
                     Width="25" HorizontalAlignment="Left" IsEnabled="{Binding Path=IsInEditing}">
 
-                <Image Source="/GUI/Design/Styles/Images/cancel.png" Width="25"/>
+                <Image Source="\GUI\Design\Styles\Images\cancel.png" Width="25"/>
 
             </Button>
 
@@ -79,7 +79,7 @@
                     Command="{Binding Path=Presenter.Search, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"   
                     Width="Auto" HorizontalAlignment="Left">
 
-                <Image Source="/GUI/Design/Styles/Images/1351794424_file_search.png"
+                <Image Source="\GUI\Design\Styles\Images\1351794424_file_search.png"
                        Width="25"/>
                 <xctk:SplitButton.DropDownContent>
                     <Border  Background="CornflowerBlue" >
@@ -100,7 +100,7 @@
                     ToolTip= "Abilita la modalità ricerca immediata sul posto (tasto scorciatoia: F9)&#x0a;Per eseguire la ricerca, dopo aver abilitato la ricerca immediata ed aver immesso i dati, premere Ctrl-Invio"
                     Width="25" HorizontalAlignment="Left" IsEnabled="{Binding AllowFastSearch}">
 
-                <Image Source="/GUI/Design/Styles/Images/find.png" Width="32"/>
+                <Image Source="\GUI\Design\Styles\Images\find.png" Width="32"/>
 
             </Button>
 
@@ -109,7 +109,7 @@
                     ToolTip="Crea una nuova fattura con copia di quella corrente - Scelta rapida Ctrl +"  
                     IsEnabled="{Binding Path=AllowInsertNewEntity}">
 
-                <Image Source="/GUI/Design/Styles/Images/Files-New-File-icon.png" Width="25"/>
+                <Image Source="\GUI\Design\Styles\Images\Files-New-File-icon.png" Width="25"/>
 
             </Button>
 
@@ -118,7 +118,7 @@
                     ToolTip="Visualizzazione albero fattura pa" VerticalAlignment="Stretch"
                     IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
 
-                <Image Source="/GUI/Design/Styles/Images/Flow Chart-48.png" />
+                <Image Source="\GUI\Design\Styles\Images\Flow Chart-48.png" />
             </Button>
 
             <Button Name="ViewXmlIntoBrowser" Command="{Binding ShowXmlIntoBrowserCommand}"
@@ -126,7 +126,7 @@
                     ToolTip="Visualizzazione browser fattura pa" VerticalAlignment="Stretch"
                     IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
 
-                <Image Source="/GUI/Design/Styles/Images/report-icon.png" />
+                <Image Source="\GUI\Design\Styles\Images\report-icon.png" />
             </Button>
 
             <Button Command="{Binding GenerateXmlStreamCommand}"
@@ -134,7 +134,7 @@
                     ToolTip="Generazione file fattura PA sul desktop" 
                     IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
 
-                <Image Source="/GUI/Design/Styles/Images/Send File-48.png" Width="25" />
+                <Image Source="\GUI\Design\Styles\Images\Send File-48.png" Width="25" />
             </Button>
 
         </DockPanel>
