--- a/FaPA/GUI/Design/Templates/DatiAnagraficiTerzoIntermediario.xaml
+++ b/FaPA/GUI/Design/Templates/DatiAnagraficiTerzoIntermediario.xaml
@@ -1,7 +1,9 @@
-﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiAnagrafici"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiAnagraficiTerzoIntermediario"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
+             xmlns:t="clr-namespace:FaPA.GUI.Design.Templates"
+             xmlns:enums="clr-namespace:FaPA.Core.FaPa"
+             xmlns:utils="clr-namespace:FaPA.GUI.Utils">
 
     <Grid Margin="2,2,2,2">
 
@@ -31,6 +33,7 @@
                           Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}">
 
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
                             <RowDefinition Height="45" />
@@ -70,13 +73,24 @@
                         <StackPanel  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
                             <TextBlock Text="Cognome" />
                             <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.Anagrafica.Cognome, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
-                                                            MaxLength="60" Margin="2,0,2,0"/>
+                                       MaxLength="60" Margin="2,0,2,0"/>
                         </StackPanel>
 
-                        <StackPanel  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
+                        <StackPanel  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
                             <TextBlock Text="Nome" />
                             <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.Anagrafica.Nome, UpdateSourceTrigger=LostFocus}" 
-                                                            MaxLength="60" Margin="2,0,2,0"/>
+                                       MaxLength="60" Margin="2,0,2,0"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3"
+                                    Margin="2,0,2,0" HorizontalAlignment="Stretch" Tag="EnterAsTab" >
+                            <TextBlock Text="Soggetto emittente" />
+                            <ComboBox   ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:SoggettoEmittenteType}}, UpdateSourceTrigger=PropertyChanged}"  
+                                    DisplayMemberPath="Description" SelectedValuePath="Value" 
+                                    IsReadOnly="False"
+                                    SelectedValue="{Binding CurrentPoco.SoggettoEmittente, UpdateSourceTrigger=LostFocus}">
+                            </ComboBox>
+
                         </StackPanel>
 
                     </Grid>
