--- a/FaPA/GUI/Design/Templates/User.xaml
+++ b/FaPA/GUI/Design/Templates/User.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FaPA.GUI.Design.Templates.User"
+﻿<controls:BaseCustomControl x:Class="FaPA.GUI.Design.Templates.User"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,6 +6,7 @@
              xmlns:enums="clr-namespace:FaPA.Core"
              xmlns:utils="clr-namespace:FaPA.GUI.Utils"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:controls="clr-namespace:FaPA.GUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="0,15">
@@ -47,7 +48,7 @@
         </Button>
 
         <xctk:WatermarkTextBox  x:Name="Id" 
-                                    Text="{Binding Id, Mode=TwoWay, NotifyOnSourceUpdated=True, 
+                                    Text="{Binding CurrentEntity.Id, Mode=TwoWay, NotifyOnSourceUpdated=True, 
                                                                     ValidatesOnDataErrors=False, 
                                                                     NotifyOnValidationError=True, 
                                                                     UpdateSourceTrigger=LostFocus}"
@@ -68,7 +69,7 @@
                        Width="Auto" />
 
         <xctk:WatermarkTextBox  x:Name="UserName" 
-                                    Text="{Binding UserName,
+                                    Text="{Binding CurrentEntity.UserName,
                                                    Mode=TwoWay, 
                                                    NotifyOnSourceUpdated=True, 
                                                    ValidatesOnDataErrors=True, 
@@ -96,8 +97,9 @@
                   TextSearch.TextPath="Description"
                   SelectedValuePath="Value"
                   ItemsSource="{Binding Source={utils:Enumeration {x:Type enums:TipoUtenteEnums}}}"
-                  SelectedValue="{Binding Path=Role, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,  ValidatesOnDataErrors=True}"
+                  SelectedValue="{Binding Path=CurrentEntity.Role, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,  ValidatesOnDataErrors=True}"
                   DisplayMemberPath="Description" />
 
     </Grid>
-</UserControl>
+</controls:BaseCustomControl>
+
