--- a/FaPA/GUI/Design/Templates/UsersGrid.xaml
+++ b/FaPA/GUI/Design/Templates/UsersGrid.xaml
@@ -1,10 +1,12 @@
-﻿<UserControl x:Class="FaPA.GUI.Design.Templates.UsersGrid"
+﻿<controls:BaseListViewControl  
+             x:Class="FaPA.GUI.Design.Templates.UsersGrid"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:controls="clr-namespace:FaPA.GUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid HorizontalAlignment="Stretch">
@@ -86,7 +88,7 @@
                         Command="{Binding Presenter.OnGridEmptyCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
                         ToolTip="Crea nuovo fornitore">
 
-                <Image Source="/GUI/Design/Styles/Images/1343547225_file_add.png"
+                <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png"
                        
                        Width="25"/>
             </Button>
@@ -96,7 +98,7 @@
                     ToolTip="Visualizza la scheda dettaglio" 
                     Width="25">
 
-                <Image Source="/GUI/Design/Styles/Images/find(2).png"
+                <Image Source="\GUI\Design\Styles\Images\find(2).png"
                        Width="Auto"/>
             </Button>
 
@@ -109,4 +111,4 @@
 
     </Grid>
 
-</UserControl>
+</controls:BaseListViewControl>
