--- a/FaPA/GUI/Design/Templates/Allegati.xaml
+++ b/FaPA/GUI/Design/Templates/Allegati.xaml
@@ -45,8 +45,8 @@
 
                 </StackPanel>
 
-                <Button Content=" Seleziona " Grid.Row="1" Grid.Column="0" Command="{Binding OpenPdf}" Margin="4,4,4,4"/>
-                <Button Content=" Carica " Grid.Row="1" Grid.Column="1" Command="{Binding LoadBytes}" Margin="4,4,4,4"/>
+                <Button Content=" Seleziona " Grid.Row="1" Grid.Column="0" Height="30"  Command="{Binding OpenPdf}" Margin="4,4,4,4"/>
+                <Button Content=" Carica " Grid.Row="1" Grid.Column="1" Height="30" Command="{Binding LoadBytes}" Margin="4,4,4,4"/>
 
                 <StackPanel Grid.Row="2" Grid.Column="0" Margin="2,0,0,0">
                     <TextBlock Text="Nome allegato" />
