--- a/FaPA/GUI/Design/Templates/Anagrafica.xaml
+++ b/FaPA/GUI/Design/Templates/Anagrafica.xaml
@@ -40,18 +40,22 @@
             </StackPanel>
             <StackPanel  Margin="2,0,2,0">
                 <TextBlock Text="Codice fiscale" />
-                <TextBox   Text="{Binding CurrentEntity.CodiceFiscale, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                <TextBox   Text="{Binding CurrentEntity.CodiceFiscale, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
+                           MaxLength="28"
+                           HorizontalAlignment="Stretch"/>
             </StackPanel>
             <StackPanel  Margin="2,0,2,0">
                 <TextBlock Text="P.Iva" />
-                <TextBox   Text="{Binding CurrentEntity.PIva, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                <TextBox   Text="{Binding CurrentEntity.PIva, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" MaxLength="11"
+                           HorizontalAlignment="Stretch"/>
             </StackPanel>
 
         </DockPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="2,0,2,0">
             <TextBlock Text="Denominazione" />
-            <TextBox   Text="{Binding CurrentEntity.Denominazione, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+            <TextBox   Text="{Binding CurrentEntity.Denominazione, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" MaxLength="80"
+                       HorizontalAlignment="Stretch" />
         </StackPanel>
         
         <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="2,0,2,0">
@@ -67,18 +71,21 @@
         <DockPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
             <StackPanel  Margin="2,0,2,0">
                 <TextBlock Text="Numero civico" />
-                <TextBox   Text="{Binding CurrentEntity.Civico, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
+                <TextBox   Text="{Binding CurrentEntity.Civico, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" MaxLength="8"
+                           HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
             </StackPanel>
 
             <StackPanel  Margin="2,0,2,0">
                 <TextBlock Text="Indirizzo" />
-                <TextBox   Text="{Binding CurrentEntity.Indirizzo, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                <TextBox   Text="{Binding CurrentEntity.Indirizzo, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" MaxLength="60"
+                           HorizontalAlignment="Stretch"/>
             </StackPanel>
         </DockPanel>
 
         <StackPanel Grid.Row="5" Grid.Column="0" Margin="2,0,2,0">
             <TextBlock Text="CAP" />
-            <TextBox   Text="{Binding CurrentEntity.Cap, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+            <TextBox   Text="{Binding CurrentEntity.Cap, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" MaxLength="5"
+                       HorizontalAlignment="Stretch" />
         </StackPanel>
 
         <StackPanel Grid.Row="5" Grid.Column="1" Margin="2,0,2,0">
@@ -103,34 +110,41 @@
 
         <StackPanel Grid.Row="7" Grid.Column="0" Margin="2,0,2,0" Grid.ColumnSpan="2">
             <TextBlock Text="eMail" />
-            <TextBox   Text="{Binding CurrentEntity.Email, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+            <TextBox   Text="{Binding CurrentEntity.Email, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" MaxLength="256"
+                       HorizontalAlignment="Stretch" />
         </StackPanel>
 
         <StackPanel Grid.Row="8" Grid.Column="0" Margin="2,0,2,0" Grid.ColumnSpan="2">
             <TextBlock Text="PEC" />
-            <TextBox   Text="{Binding CurrentEntity.Pec, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+            <TextBox   Text="{Binding CurrentEntity.Pec, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" MaxLength="80"
+                       HorizontalAlignment="Stretch" />
         </StackPanel>
 
         <StackPanel Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
             <StackPanel Margin="2,0,2,0" MinWidth="100">
                 <TextBlock Text="Tel." />
-                <TextBox   Text="{Binding CurrentEntity.Tel, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                <TextBox   Text="{Binding CurrentEntity.Tel, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" MaxLength="12"
+                           HorizontalAlignment="Stretch" />
             </StackPanel>
 
             <StackPanel Margin="2,0,2,0" MinWidth="100">
                 <TextBlock Text="Fax" />
-                <TextBox   Text="{Binding CurrentEntity.Fax, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                <TextBox   Text="{Binding CurrentEntity.Fax, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" MaxLength="12"
+                           HorizontalAlignment="Stretch" />
             </StackPanel>
 
             <StackPanel Margin="2,0,2,0" MinWidth="50">
                 <TextBlock Text="Uff. PA" />
-                <TextBox   Text="{Binding CurrentEntity.CodUfficioPa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                <TextBox   Text="{Binding CurrentEntity.CodUfficioPa, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" MaxLength="6" 
+                           HorizontalAlignment="Stretch" />
             </StackPanel>
         </StackPanel>
 
         <StackPanel Grid.Row="10" Grid.Column="0" Margin="2,0,2,0" Grid.ColumnSpan="2">
-            <TextBlock Text="Note" />
-            <TextBox   Text="{Binding CurrentEntity.Note, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+            <TextBlock Text="Riferimento Amm." />
+            <TextBox   Text="{Binding CurrentEntity.RifAmministrazione, UpdateSourceTrigger=LostFocus, Mode=TwoWay, ValidatesOnDataErrors=True}" 
+                       MaxLength="20"
+                       HorizontalAlignment="Stretch" />
         </StackPanel>
     </Grid>
     
