--- a/FaPA/GUI/Design/Templates/DatiAnagraficiTerzoIntermediario.xaml
+++ b/FaPA/GUI/Design/Templates/DatiAnagraficiTerzoIntermediario.xaml
@@ -49,25 +49,26 @@
                         <StackPanel  Grid.Row="0" Grid.Column="0" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
                             <TextBlock Text="Id Paese" />
                             <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.IdFiscaleIVA.IdPaese, UpdateSourceTrigger=LostFocus}" 
-                                                            MaxLength="2"  Margin="2,0,2,0"/>
+                                       MaxLength="2"  Margin="2,0,2,0"/>
                         </StackPanel>
 
                         <StackPanel  Grid.Row="0" Grid.Column="1" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
                             <TextBlock Text="Id codice" />
                             <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.IdFiscaleIVA.IdCodice, UpdateSourceTrigger=LostFocus}" 
-                                                            MaxLength="28"
-                                                            Margin="2,0,2,0"/>
+                                                      MaxLength="11"
+                                                      Margin="2,0,2,0"/>
                         </StackPanel>
 
                         <StackPanel  Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" Width="Auto"   HorizontalAlignment="Stretch" MinWidth="200">
                             <TextBlock Text="Codice Fiscale" />
-                            <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.CodiceFiscale, UpdateSourceTrigger=LostFocus}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
+                            <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.CodiceFiscale,  UpdateSourceTrigger=LostFocus}" MaxLength="16"
+                                       HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
                         </StackPanel>
 
                         <StackPanel  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
                             <TextBlock Text="Denominazione" />
                             <TextBox   Text="{Binding CurrentPoco.DatiAnagrafici.Anagrafica.Denominazione, UpdateSourceTrigger=LostFocus}" 
-                                                                MaxLength="80" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
+                                                      MaxLength="80" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
                         </StackPanel>
 
                         <StackPanel  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="2,0,2,0" Width="Auto"  HorizontalAlignment="Stretch" MinWidth="200">
