--- a/FaPA/GUI/Design/Templates/DatiTrasmittente.xaml
+++ b/FaPA/GUI/Design/Templates/DatiTrasmittente.xaml
@@ -29,24 +29,26 @@
 
                 <StackPanel Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Paese" />
-                    <TextBox   Text="{Binding UserProperty.IdTrasmittente.IdPaese, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                    <TextBox   Text="{Binding UserProperty.IdTrasmittente.IdPaese, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
+                               HorizontalAlignment="Stretch"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Codice Fisc." />
-                    <TextBox   Text="{Binding UserProperty.IdTrasmittente.IdCodice, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding UserProperty.IdTrasmittente.IdCodice, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
+                               MaxLength="28" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Prog. invio" />
-                    <TextBlock   Text="{Binding UserProperty.ProgressivoInvio, Mode=OneWay, UpdateSourceTrigger=LostFocus}" HorizontalAlignment="Stretch" />
+                    <TextBlock Text="{Binding UserProperty.ProgressivoInvio, Mode=OneWay, UpdateSourceTrigger=LostFocus}" 
+                               HorizontalAlignment="Stretch" />
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Uff. PA" />
-                    <TextBox   Text="{Binding UserProperty.CodiceDestinatario,  UpdateSourceTrigger=LostFocus, 
-                                              ValidatesOnDataErrors=False}" 
-                               HorizontalAlignment="Stretch" />
+                    <TextBox   Text="{Binding UserProperty.CodiceDestinatario,  UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=False}" 
+                               MaxLength="6" HorizontalAlignment="Stretch" />
                 </StackPanel>
 
             </Grid>
@@ -65,12 +67,14 @@
 
                 <StackPanel  Grid.Row="0" Grid.Column="0" Margin="2,0,2,0">
                     <TextBlock Text="Telefono" />
-                    <TextBox   Text="{Binding UserProperty.ContattiTrasmittente.Telefono, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
+                    <TextBox   Text="{Binding UserProperty.ContattiTrasmittente.Telefono, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"
+                               MaxLength="12" HorizontalAlignment="Stretch" Margin="2,0,2,0"/>
                 </StackPanel>
 
                 <StackPanel  Grid.Row="0" Grid.Column="1" Margin="2,0,2,0">
                     <TextBlock Text="Email" />
-                    <TextBox   Text="{Binding UserProperty.ContattiTrasmittente.Email, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"/>
+                    <TextBox   Text="{Binding UserProperty.ContattiTrasmittente.Email, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
+                               MaxLength="256" HorizontalAlignment="Stretch"/>
                 </StackPanel>
 
             </Grid>
@@ -80,7 +84,6 @@
                                    Visibility="{Binding CurrentPoco, Converter={StaticResource NullToVisibiltyConverter}}"
                                    SaveCommand="{Binding SaveEntity}"
                                    PerformCancelCommand="{Binding PerformCancel}"/>
-
     </Grid>
 
 </UserControl>
