--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -77,6 +77,7 @@
                 <StackPanel Grid.Row="0" Grid.Column="6" Margin="2,0,2,0">
                     <TextBlock Text="Numero " />
                     <TextBox   Text="{Binding CurrentEntity.NumeroFatturaDB, Mode=TwoWay,ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True, NotifyOnValidationError=True, ValidatesOnNotifyDataErrors=True}" 
+                               MaxLength="20"
                                LostFocus="OnCommitBindingGroup"
                                HorizontalAlignment="Stretch"/>
                 </StackPanel>                
@@ -135,9 +136,9 @@
             </StackPanel>
         
             <StackPanel Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="2"  Margin="2,0,2,0">
-                <TextBlock Text="Note" />
-                <TextBox   Text="{Binding CurrentEntity.NoteDB, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
-                           HorizontalAlignment="Stretch" MaxLength="1000" TextWrapping="Wrap"/>
+                <TextBlock Text="Riferimento Amm." />
+                <TextBox   Text="{Binding CurrentEntity.RiferimentoAmmDB, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
+                           HorizontalAlignment="Stretch" MaxLength="20" TextWrapping="Wrap"/>
             </StackPanel>
                        
             <GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="8" Header="Dettagli fattura"  Margin="2,2,2,2" Padding="4,4,4,4"
