--- a/FaPA/GUI/Design/Templates/DettagliFattura.xaml
+++ b/FaPA/GUI/Design/Templates/DettagliFattura.xaml
@@ -1,19 +1,18 @@
-﻿<controls:BaseListViewControl  
+﻿<UserControl 
     x:Class="FaPA.GUI.Design.Templates.DettagliFattura"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:controls="clr-namespace:FaPA.GUI.Controls"
-    xmlns:m1="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
     xmlns:enums="clr-namespace:FaPA.Core.FaPa"
     xmlns:u="clr-namespace:FaPA.GUI.Utils"
     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
     xmlns:f="clr-namespace:FaPA.Infrastructure.Finder"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:templates="clr-namespace:FaPA.GUI.Design.Templates"
     mc:Ignorable="d" d:DesignWidth="1000">
 
-    <controls:BaseListViewControl.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
             <!--<Style x:Key="GroupHeaderStyle" TargetType="{x:Type GroupItem}">
                 <Setter Property="Template">
@@ -37,7 +36,7 @@
             </Style>-->
         </ResourceDictionary>
 
-    </controls:BaseListViewControl.Resources>
+    </UserControl.Resources>
 
     <Grid >
         <Grid.ColumnDefinitions>
@@ -48,8 +47,14 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-        <DockPanel x:Name="emptyMessage" 
+
+        <templates:InstanceNullManager  DataContext="{Binding Path=DettagliFatturaViewModel}" Grid.Row="0" Grid.Column="0" 
+                                        Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResourceExtension BoolToVisibilityConverter}}"
+                                        EmptyMessage="Nessun dettaglio fattura presente"
+                                        ActionCommandMessage="Aggiungi una riga di dettaglio"
+                                        OnNullCommand="{Binding AddItemCommand}"/>
+
+        <!--<DockPanel x:Name="emptyMessage" 
                    Grid.Row="0" Width="Auto" HorizontalAlignment="Stretch"
                    Visibility="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.IsEmpty, Mode=OneWay, 
                                         Converter={StaticResource BoolToVisibilityConverter}, 
@@ -66,16 +71,14 @@
                     </Hyperlink>
             </TextBlock>
 
-        </DockPanel>
+        </DockPanel>-->
 
         <DockPanel Grid.Row="1" HorizontalAlignment="Stretch" Width="Auto">
             <DataGrid x:Name="DettagliFatturaGridControl"
-                        ItemsSource="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.UserCollectionView, 
-                                              NotifyOnSourceUpdated=True,
-                                              RelativeSource={RelativeSource FindAncestor,  AncestorType={x:Type Window}}}"
-                        Visibility="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.IsEmpty, Mode=OneWay, 
-                                             Converter={StaticResource BoolToOppositeVisibilityConverter},
-                                             RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
+                        ItemsSource="{Binding Path=DettagliFatturaViewModel.UserCollectionView, NotifyOnSourceUpdated=True, 
+                                                   NotifyOnTargetUpdated=True, UpdateSourceTrigger=PropertyChanged}"
+                        Visibility="{Binding Path=DettagliFatturaViewModel.IsEmpty, Mode=OneWay, 
+                                             Converter={StaticResource BoolToOppositeVisibilityConverter}}"
                         IsSynchronizedWithCurrentItem="True"
                         PreviewKeyDown="DettagliFatturaGridControl_OnPreviewKeyDown"
                         FontSize="14"
@@ -101,30 +104,24 @@
                 </DataGrid.Resources>-->
 
                 <DataGrid.Resources>
-                    <f:BindingProxy x:Key="proxyFVM" Data="{Binding Path=Presenter.EditFatturaViewModel,  
-                                                                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" />
+                    <f:BindingProxy x:Key="proxyFVM" Data="{Binding Path=.}" />
                 </DataGrid.Resources>
 
-                <DataGrid.RowValidationRules>
+                <!--<DataGrid.RowValidationRules>
 
                     <DataErrorValidationRule  ValidationStep="CommittedValue" ValidatesOnTargetUpdated="True" />
 
-                </DataGrid.RowValidationRules>
+                </DataGrid.RowValidationRules>-->
 
                 <DataGrid.Columns >
 
                     <DataGridTextColumn Header="Num" Width="Auto" u:TextBoxBehavior.MaxLength="4"
-                                        Binding="{Binding NumeroLinea, Mode=TwoWay, UpdateSourceTrigger =LostFocus}"
+                                        Binding="{Binding NumeroLinea,  Mode=TwoWay, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, 
+                                                          NotifyOnTargetUpdated=True, NotifyOnValidationError=True, ValidatesOnNotifyDataErrors=True}"
                                         ElementStyle="{StaticResource CellErrorInfoStyle}">
                     </DataGridTextColumn>
 
-                    <!--<DataGridTextColumn Header="TipoCessione" Width="Auto" 
-                                        Binding="{Binding TipoCessionePrestazione, Mode=OneWay, UpdateSourceTrigger =LostFocus}"
-                                        ElementStyle="{StaticResource CellErrorInfoStyle}">
-
-                    </DataGridTextColumn>-->
-
-                    <DataGridTextColumn Header="Descrizione" u:TextBoxBehavior.MaxLength="1000"
+                    <DataGridTextColumn Header="Descrizione"  u:TextBoxBehavior.MaxLength="1000"
                                         Width="Auto" 
                                         Binding="{Binding Descrizione, Mode=TwoWay, ValidatesOnDataErrors =True, 
                                                                                     NotifyOnSourceUpdated=True,
@@ -143,20 +140,6 @@
 
                     <DataGridTextColumn Header="Unità" Width="Auto" u:TextBoxBehavior.MaxLength="10"
                                         Binding="{Binding UnitaMisura, ValidatesOnDataErrors =True, UpdateSourceTrigger =LostFocus}"
-                                        ElementStyle="{StaticResource CellErrorInfoStyle}">
-
-                    </DataGridTextColumn>
-
-                    <DataGridTextColumn Header="Data inizio"
-                                        Width="Auto" 
-                                        Binding="{Binding DataInizioPeriodo, StringFormat='{}{0:d}', ValidatesOnDataErrors =True, UpdateSourceTrigger =LostFocus}"
-                                        ElementStyle="{StaticResource CellErrorInfoStyle}">
-
-                    </DataGridTextColumn>
-
-                    <DataGridTextColumn Header="Data fine"
-                                        Width="Auto" 
-                                        Binding="{Binding DataFinePeriodo, StringFormat='{}{0:d}', ValidatesOnDataErrors =True, UpdateSourceTrigger =LostFocus}"
                                         ElementStyle="{StaticResource CellErrorInfoStyle}">
 
                     </DataGridTextColumn>
@@ -185,6 +168,13 @@
 
                     </DataGridTextColumn>
 
+                    <DataGridTextColumn Header="Importo" Width="Auto"
+                                        Binding="{Binding PrezzoTotale, StringFormat=0.00, ValidatesOnDataErrors =True,
+                                                          UpdateSourceTrigger =LostFocus}"
+                                        ElementStyle="{StaticResource CellErrorInfoStyle}">
+
+                    </DataGridTextColumn>
+                    
                     <DataGridComboBoxColumn Header="Ritenuta" 
                                             ItemsSource="{Binding Source={u:Enumeration {x:Type enums:RitenutaType}}, UpdateSourceTrigger=PropertyChanged}"  
                                             DisplayMemberPath="Description" SelectedValuePath="Value" 
@@ -198,6 +188,23 @@
                         <DataGridComboBoxColumn.EditingElementStyle>
                             <Style TargetType="ComboBox">
                                 <Setter Property="ItemsSource" Value="{Binding Source={u:Enumeration {x:Type enums:RitenutaType}}, UpdateSourceTrigger=PropertyChanged}"/>
+                            </Style>
+                        </DataGridComboBoxColumn.EditingElementStyle>
+                    </DataGridComboBoxColumn>
+                    
+                    <DataGridComboBoxColumn Header="Tipo cessione" 
+                                            ItemsSource="{Binding Source={u:Enumeration {x:Type enums:TipoCessionePrestazioneType}}, UpdateSourceTrigger=PropertyChanged}"  
+                                            DisplayMemberPath="Description" SelectedValuePath="Value" 
+                                            SelectedValueBinding="{Binding TipoCessionePrestazione, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus}">
+
+                        <DataGridComboBoxColumn.ElementStyle>
+                            <Style TargetType="ComboBox">
+                                <Setter Property="ItemsSource" Value="{Binding Source={u:Enumeration {x:Type enums:TipoCessionePrestazioneType}}, UpdateSourceTrigger=PropertyChanged}"/>
+                            </Style>
+                        </DataGridComboBoxColumn.ElementStyle>
+                        <DataGridComboBoxColumn.EditingElementStyle>
+                            <Style TargetType="ComboBox">
+                                <Setter Property="ItemsSource" Value="{Binding Source={u:Enumeration {x:Type enums:TipoCessionePrestazioneType}}, UpdateSourceTrigger=PropertyChanged}"/>
                             </Style>
                         </DataGridComboBoxColumn.EditingElementStyle>
                     </DataGridComboBoxColumn>
@@ -219,13 +226,20 @@
                         </DataGridComboBoxColumn.EditingElementStyle>
                     </DataGridComboBoxColumn>
 
-                    <DataGridTextColumn Header="Importo" Width="Auto"
-                                        Binding="{Binding PrezzoTotale, StringFormat=0.00, ValidatesOnDataErrors =True,
-                                                          UpdateSourceTrigger =LostFocus}"
+                    <DataGridTextColumn Header="Data inizio"
+                                        Width="Auto" 
+                                        Binding="{Binding DataInizioPeriodo, StringFormat='{}{0:d}', ValidatesOnDataErrors =True, UpdateSourceTrigger =LostFocus}"
                                         ElementStyle="{StaticResource CellErrorInfoStyle}">
 
                     </DataGridTextColumn>
 
+                    <DataGridTextColumn Header="Data fine"
+                                        Width="Auto" 
+                                        Binding="{Binding DataFinePeriodo, StringFormat='{}{0:d}', ValidatesOnDataErrors =True, UpdateSourceTrigger =LostFocus}"
+                                        ElementStyle="{StaticResource CellErrorInfoStyle}">
+
+                    </DataGridTextColumn>
+                    
                     <DataGridTemplateColumn Header="Sconto/Magg." Width="Auto" >
 
                         <DataGridTemplateColumn.CellTemplate>
@@ -236,7 +250,7 @@
                                                      IsOpen="{Binding Data.DettagliFatturaViewModel.ScontoMaggiorazioneViewModel.IsDropDownOpen, 
                                                                       Source={StaticResource proxyFVM}, Mode=OneWayToSource}" >
 
-                                        <Image Source="\GUI\Design\Styles\Images\Calendar_64.png"></Image>
+                                        <Image Source="/GUI/Design\Styles\Images\Calendar_64.png"></Image>
 
                                         <xctk:DropDownButton.Resources>
                                             <f:BindingProxy x:Key="proxyDD" Data="{Binding ElementName=DropCa}" />
@@ -301,7 +315,7 @@
                                                      IsOpen="{Binding Data.DettagliFatturaViewModel.AltridatiViewModel.IsDropDownOpen, 
                                                                       Source={StaticResource proxyFVM}, Mode=OneWayToSource}" >
 
-                                    <Image Source="\GUI\Design\Styles\Images\Calendar_64.png"></Image>
+                                    <Image Source="/GUI/Design\Styles\Images\Calendar_64.png"></Image>
 
                                     <xctk:DropDownButton.Resources>
                                         <f:BindingProxy x:Key="proxyDD" Data="{Binding ElementName=DropCa}" />
@@ -364,7 +378,7 @@
                                                 </Button>
 
                                                 <Button Command="{Binding Path=Data.RemoveDettaglioElement, Source={StaticResource proxyFVM}}"
-                                                        IsEnabled="{Binding Path=Data.EditFatturaViewModel.AllowAddAndRemoveDettaglioFattura, Source={StaticResource proxyFVM}}"
+                                                        IsEnabled="{Binding Path=Data.DettagliFatturaViewModel.AllowAddAndRemoveDettaglioFattura, Source={StaticResource proxyFVM}}"
                                                         Width="Auto" Height="25" HorizontalAlignment="Left" Margin="2,1,0,0">
 
                                                     <Image Source="\GUI\Design\Styles\Images\delete(1).png" Width="25"/>
@@ -398,32 +412,14 @@
 			</DataGrid>
         </DockPanel>
 
-        <DockPanel Grid.Row="2" Height="28"  x:Name="recordsToolBar" Margin="1 3 1 3" Background="Gainsboro"
-                   Visibility="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.IsEmpty, Mode=OneWay, 
-                                        Converter={StaticResource BoolToOppositeVisibilityConverter}, 
-                                        RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}">
-
-            <m1:MyRecordNavigator x:Name="DettagliFatturaNaviToolBar" Height="25"
-                                  ItemsSource="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.UserCollectionView, 
-                                                        RelativeSource={RelativeSource FindAncestor,  AncestorType={x:Type Window}}}"  
-                                  VerticalAlignment="Center"
-                                  GridSource="{Binding ElementName=DettagliFatturaGridControl}"/>
-
-            <Button VerticalAlignment="Center" Width="Auto" Height="25" HorizontalAlignment="Left" Margin="5,1,0,0"
-                    Command="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.AddItemCommand, RelativeSource={RelativeSource FindAncestor,  AncestorType={x:Type Window}}}">
-                
-                <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png" Width="25"/>
-            </Button>
-
-            <Button Command="{Binding Path=DataContext.EditViewModel.DettagliFatturaViewModel.DeleteEntityCommand,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-                    Width="Auto" Height="25" HorizontalAlignment="Left" Margin="2,1,0,0">
-
-                <Image Source="\GUI\Design\Styles\Images\delete(1).png" Width="25"/>
-
-            </Button>
-
-        </DockPanel>
+        <templates:SaveCancelRemoveButtons  DataContext="{Binding Path=DettagliFatturaViewModel}"
+                                            Grid.Row="2" Margin="1 3 1 3" HorizontalAlignment="Left"
+                                            Visibility="{Binding IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}"
+                                            UserCollectionView="{Binding Path=UserCollectionView}"
+                                            DeleteEntityCommand="{Binding DeleteEntityCommand}"
+                                            PerformCancelCommand="{Binding PerformCancel}"
+                                            AddItemCommand="{Binding AddItemCommand}"/>
 
     </Grid>
     
-</controls:BaseListViewControl >
+</UserControl >
